--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,14 @@
-* {
+
+html{
     margin:0;
     padding:0;
-    box-sizing: border-box;
+    max-height:100vh;
+    overflow:hidden;
+}
+body {
+    /* background: rgba(1, 1, 1, 0); */
+    background: linear-gradient(to bottom, #202020, #111119);
+    height: 100%;
 }
 main {
     font-family: 'Heebo', sans-serif;
@@ -11,7 +18,7 @@ main {
     place-items: center;
 }
 .underbar {
-    padding-left: 1%;
+    padding-left: 1.2%;
 }
 .weather {
     font-size: 50px;
@@ -21,6 +28,8 @@ main {
     font-size: 90px;
 }
 .landing {
+    position: relative;
+    top: -24px; 
     min-height: 100vh;
     background: url("/RainNearMe/src/img/rainpool.jpg");
     background-size: cover;
@@ -35,6 +44,27 @@ main {
     left: 40%;
     color: #025072;
 
+}
+.copyright-text {
+    font-family: "Abril Fatface", cursive;
+    font-weight: lighter;
+    font-size: 1rem;
+    position: absolute;
+    top: 18%;
+    left: 40%;
+    color: #025072;
+
+}
+.nav-links  {
+    display: flex;
+    list-style: none;
+    position: absolute;
+    top: 17.5%;
+    left: 52.7%;
+}
+.nav-links li {
+    padding-left: 1rem;
+    
 }
 .intro {
     background: #053e57;
@@ -65,7 +95,7 @@ main {
 
 
 .hide {
-    background: 053e57;
+    background: #053e57;
     overflow: hidden;
 }
 
@@ -74,3 +104,187 @@ main {
     display: inline-block;
 }
 #map-example-container {height: 300px};
+
+.rain {
+    position: absolute;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 2;
+  }
+  
+  .rain.back-row {
+    display: none;
+    z-index: 1;
+    bottom: 60px;
+    opacity: 0.5;
+  }
+  
+  body.back-row-toggle .rain.back-row {
+    display: block;
+  }
+  
+  .drop {
+    position: absolute;
+    bottom: 100%;
+    width: 15px;
+    height: 100px;
+    pointer-events: none;
+    animation: drop 0.5s linear infinite;
+  }
+  
+  @keyframes drop {
+    0% {
+      transform: translateY(0vh);
+    }
+    75% {
+      transform: translateY(90vh);
+    }
+    100% {
+      transform: translateY(90vh);
+    }
+  }
+  
+  .stem {
+    width: 1px;
+    height: 100%;
+    margin-left: 7px;
+    background: linear-gradient(to bottom, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0.25));
+    animation: stem 0.5s linear infinite;
+  }
+  
+  @keyframes stem {
+    0% {
+      opacity: 1;
+    }
+    65% {
+      opacity: 1;
+    }
+    75% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 0;
+    }
+  }
+  
+  .splat {
+    width: 15px;
+    height: 10px;
+    border-top: 2px dotted rgba(255, 255, 255, 0.5);
+    border-radius: 50%;
+    opacity: 1;
+    transform: scale(0);
+    animation: splat 0.5s linear infinite;
+    display: none;
+  }
+  
+  body.splat-toggle .splat {
+    display: block;
+  }
+  
+  @keyframes splat {
+    0% {
+      opacity: 1;
+      transform: scale(0);
+    }
+    80% {
+      opacity: 1;
+      transform: scale(0);
+    }
+    90% {
+      opacity: 0.5;
+      transform: scale(1);
+    }
+    100% {
+      opacity: 0;
+      transform: scale(1.5);
+    }
+  }
+
+  @media (max-width:767px)
+    {
+      .site-footer
+      {
+        padding-bottom:0
+      }
+      .site-footer .copyright-text,.site-footer .social-icons
+      {
+        text-align:center
+      }
+    }
+    .social-icons
+    {
+      padding-left:0;
+      margin-bottom:0;
+      list-style:none
+    }
+    .social-icons li
+    {
+      display:inline-block;
+      margin-bottom:4px
+    }
+    .social-icons li.title
+    {
+      margin-right:15px;
+      text-transform:uppercase;
+      color:#96a2b2;
+      font-weight:700;
+      font-size:8px
+    }
+    .social-icons a{
+      background-color:#025072;
+      color: white;
+      font-size:12px;
+      display:inline-block;
+      line-height:24px;
+      width:24px;
+      height:24px;
+      text-align:center;
+      margin-right:8px;
+      border-radius:100%;
+      -webkit-transition:all .2s linear;
+      -o-transition:all .2s linear;
+      transition:all .2s linear
+    }
+    .social-icons a:active,.social-icons a:focus,.social-icons a:hover
+    {
+      color:#fff;
+      background-color:#29aafe
+    }
+    .social-icons.size-sm a
+    {
+      line-height:1px;
+      height:34px;
+      width:34px;
+      font-size:14px
+    }
+    .social-icons a.facebook:hover
+    {
+      background-color:#3b5998
+    }
+    .social-icons a.twitter:hover
+    {
+      background-color:#00aced
+    }
+    .social-icons a.linkedin:hover
+    {
+      background-color:#007bb6
+    }
+    .social-icons a.dribbble:hover
+    {
+      background-color:#ea4c89
+    }
+    @media (max-width:767px)
+    {
+    .social-icons li.title
+    {
+      display:block;
+      margin-right:0;
+      font-weight:600
+    }
+    }
+
+
+  
+  
